Add pagination into filter methods